finalisation page palette

--- a/palettedugout.html
+++ b/palettedugout.html
@@ -84,18 +84,18 @@
                   <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
             </div>
-               
-        
          </section>
          <!-- Plats -->
          <section class="menu__description">
             <h3 class="menu__description--titre">Plats</h3>
             <div class="menu__description--bloc_plat">
                <div class="info">
+               <div class="info--titre-plat">
                   <h4>Filet de boeuf aux herbes</h4>
-                  <div class="menu__description--bloc_plat--details">
-                     <p>Accompagné de sa ribambelle de légumes</p>
-                     <h4>40€</h4>
+                  <p class="produit">Accompagné de sa ribambelle de légumes</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>40€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -104,10 +104,12 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
+               <div class="info--titre-plat">
                   <h4>Parmentier de queue de boeuf</h4>
-                  <div class="menu__description--bloc_plat--details">
-                     <p>À la truffe noire sur sa purée de panais</p>
-                     <h4>35€</h4>
+                  <p class="produit">À la truffe noire sur sa purée de panais</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>35€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -116,16 +118,17 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
+               <div class="info--titre-plat">
                   <h4>Filet de turbot</h4>
-                  <div class="menu__description--bloc_plat--details">
-                     <p>Aux agrumes</p>
-                     <h4>44€</h4>
+                  <p class="produit">Aux agrumes</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>44€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
                   <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
-
             </div>
          </section>
          <!-- desserts -->
@@ -133,10 +136,12 @@
             <h3 class="menu__description--titre">Desserts</h3>
             <div class="menu__description--bloc_plat">
                <div class="info">
+               <div class="info--titre-plat">
                   <h4>Paris-Brest</h4>
-                  <div class="menu__description--bloc_plat--details">
-                     <p>Revisité</p>
-                     <h4>18€</h4>
+                  <p class="produit">Revisité</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>18€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -145,14 +150,13 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
-                  <h4>Macaron au chocolat d'exception </h4>
-                  <div class="menu__description--bloc_plat--details">
-                     <p>Et glace à la vanille de Madagascar</p>
-                     <h4>22€</h4>
+               <div class="info--titre-plat">
+                  <h4>Macaron au chocolat d'exception</h4>
+                  <p class="produit">Et glace à la vanille de Madagascar</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>22€</h4>
                   </div>
-
-
-
                </div>
                <div class="menu__description--bloc_plat--check_status">
                   <i class="fa-solid fa-circle-check fa-2x"></i>
@@ -160,10 +164,12 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
+               <div class="info--titre-plat">
                   <h4>Mousse au chocolat</h4>
-                  <div class="menu__description--bloc_plat--details">
-                     <p>Au piment d'Espelette et à la truffe noire</p>
-                     <h4>23€</h4>
+                  <p class="produit">Au piment d'Espelette et à la truffe noire</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>23€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
