--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -38,94 +38,165 @@
            <i class="far fa-heart fa-xl"></i>
         </div>
     </section>
-    <section class="menu__description">
-       <!-- Entrées -->
-            <section class="menu__description">
-               <h3 class="menu__description--titre">Entrées</h3>
-               <div class="menu__description--bloc_plat">
-                     <h4>Fricassée d'escargot</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Au piment d'Espelette</p>
-                        <h4>25€</h4></div>
+      <section class="menu__description--plat">
+         <!-- Entrées -->
+         <section class="menu__description">
+            <h3 class="menu__description--titre">Entrées</h3>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Fricassée d'escargot</h4>
+                  <p class="produit">Au piment d'Espelette</p>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Foie gras de canard mi-cuit</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Et ses copeaux de truffe noire</p>
-                        <h4>35€</h4></div>
+                  <div class="info--prix">
+                    <h4>25€</h4>
+                  </div>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Oeuf au plat</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                        <h4>20€</h4></div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
-            </section>
-            <!-- Plats -->
-            <section class="menu__description">
-               <h3 class="menu__description--titre">Plats</h3>
-               <div class="menu__description--bloc_plat">
-                     <h4>Filet de boeuf aux herbes</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Accompagné de sa ribambelle de légumes</p>
-                        <h4>40€</h4></div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Foie gras de canard mi-cuit</h4>
+                  <p class="produit">Et ses copeaux de truffe noire</p>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Parmentier de queue de boeuf</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>À la truffe noire sur sa purée de panais</p>
-                        <h4>35€</h4></div>
+                  <div class="info--prix">
+                    <h4>35€</h4>
+                  </div>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Filet de turbot</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Aux agrumes</p>
-                        <h4>44€</h4></div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
-            </section>
-            <!-- desserts -->
-            <section class="menu__description" >
-               <h3 class="menu__description--titre">Desserts</h3>
-               <div class="menu__description--bloc_plat">
-                     <h4>Paris-Brest</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Revisité</p>
-                        <h4>18€</h4>
-                     </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Oeuf au plat</h4>
+                  <p class="produit">Assaisonné à la truffe sur lit de caviar</p>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Macaron au chocolat d'exception </h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Et glace à la vanille de Madagascar</p>
-                        <h4>22€</h4>
-                     </div>
+                  <div class="info--prix">
+                    <h4>20€</h4>
+                  </div>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Mousse au chocolat</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Au piment d'Espelette et à la truffe noire</p>
-                        <h4>23€</h4>
-                     </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
-            </section>
-            <section class="slogan">
-               <button class="btn">
-                  Commander
-               </button>
-            </section>
-    </section>
+            </div>
+         </section>
+         <!-- Plats -->
+         <section class="menu__description">
+            <h3 class="menu__description--titre">Plats</h3>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Filet de boeuf aux herbes</h4>
+                  <p class="produit">Accompagné de sa ribambelle de légumes</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>40€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Parmentier de queue de boeuf</h4>
+                  <p class="produit">À la truffe noire sur sa purée de panais</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>35€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Filet de turbot</h4>
+                  <p class="produit">Aux agrumes</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>44€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+         </section>
+         <!-- desserts -->
+         <section class="menu__description">
+            <h3 class="menu__description--titre">Desserts</h3>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Paris-Brest</h4>
+                  <p class="produit">Revisité</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>18€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Macaron au chocolat d'exception</h4>
+                  <p class="produit">Et glace à la vanille de Madagascar</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>22€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Mousse au chocolat</h4>
+                  <p class="produit">Au piment d'Espelette et à la truffe noire</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>23€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+         </section>
+      </section>
+      <section class="slogan">
+         <button class="btn">
+            Commander
+         </button>
+      </section>
+
    </main>
 
    <footer>
-    <h2>ohmyfood</h2>
-    <nav>
-       <ul>
-          <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-          <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-       </ul>
-    </nav>
- </footer>
+      <h2>ohmyfood</h2>
+      <nav>
+         <ul>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+         </ul>
+      </nav>
+   </footer>
 </body>
+
 </html>
