--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -23,109 +23,180 @@
 <body>
    <!--  header -->
    <header class="header">
-    <a href="index.html"><i class="fas fa-arrow-left fa-xl"></i></a>
-      <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
-            alt="logo_oh_my_food" /></a>    
-   </header>
-   <main class="menu">
-   <section class="menu__entete">
-        <img src="public/images/restaurants/delice_des_sens.jpg"
-              alt="la_note_enchantee">     
-        <div class="nom_resto">
-           <div class="bloc-nom__texte">
-              <h1>Le délice des sens</h1>
-           </div>
-           <i class="far fa-heart fa-xl"></i>
-        </div>
-    </section>
-    <section class="menu__description">
-       <!-- Entrées -->
-            <section class="menu__description">
-               <h3 class="menu__description--titre">Entrées</h3>
-               <div class="menu__description--bloc_plat">
-                     <h4>Fricassée d'escargot</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Au piment d'Espelette</p>
-                        <h4>25€</h4></div>
+      <a href="index.html"><i class="fas fa-arrow-left fa-xl"></i></a>
+        <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
+              alt="logo_oh_my_food" /></a>    
+     </header>
+     <main class="menu">
+     <section class="menu__entete">
+          <img src="public/images/restaurants/delice_des_sens.jpg"
+                alt="la_note_enchantee">     
+          <div class="nom_resto">
+             <div class="bloc-nom__texte">
+                <h1>Le délice des sens</h1>
+             </div>
+             <i class="far fa-heart fa-xl"></i>
+          </div>
+      </section>
+      <section class="menu__description--plat">
+         <!-- Entrées -->
+         <section class="menu__description">
+            <h3 class="menu__description--titre">Entrées</h3>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Tartare de thon</h4>
+                  <p class="produit">Assaisonné au yuzu</p>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Foie gras de canard mi-cuit</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Et ses copeaux de truffe noire</p>
-                        <h4>35€</h4></div>
+                  <div class="info--prix">
+                    <h4>25€</h4>
+                  </div>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Oeuf au plat</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                        <h4>20€</h4></div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
-            </section>
-            <!-- Plats -->
-            <section class="menu__description">
-               <h3 class="menu__description--titre">Plats</h3>
-               <div class="menu__description--bloc_plat">
-                     <h4>Filet de boeuf aux herbes</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Accompagné de sa ribambelle de légumes</p>
-                        <h4>40€</h4></div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Bouchée de homard croustillant </h4>
+                  <p class="produit">Et sa farandole de petits légumes</p>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Parmentier de queue de boeuf</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>À la truffe noire sur sa purée de panais</p>
-                        <h4>35€</h4></div>
+                  <div class="info--prix">
+                    <h4>35€</h4>
+                  </div>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Filet de turbot</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Aux agrumes</p>
-                        <h4>44€</h4></div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
-            </section>
-            <!-- desserts -->
-            <section class="menu__description" >
-               <h3 class="menu__description--titre">Desserts</h3>
-               <div class="menu__description--bloc_plat">
-                     <h4>Paris-Brest</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Revisité</p>
-                        <h4>18€</h4>
-                     </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Velouté de cèpes </h4>
+                  <p class="produit">Aux truffes</p>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Macaron au chocolat d'exception </h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Et glace à la vanille de Madagascar</p>
-                        <h4>22€</h4>
-                     </div>
+                  <div class="info--prix">
+                    <h4>20€</h4>
+                  </div>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Mousse au chocolat</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Au piment d'Espelette et à la truffe noire</p>
-                        <h4>23€</h4>
-                     </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
-            </section>
-            <section class="slogan">
-               <button class="btn">
-                  Commander
-               </button>
-            </section>
-    </section>
+            </div>
+         </section>
+         <!-- Plats -->
+         <section class="menu__description">
+            <h3 class="menu__description--titre">Plats</h3>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Poulet rôti aux herbes de Provence</h4>
+                  <p class="produit">Et sa crème de truffe</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>40€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Langouste rôtie</h4>
+                  <p class="produit">Et ses légumes de saison</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>35€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Côte de boeuf Angus</h4>
+                  <p class="produit">Et sa purée de panais</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>44€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+         </section>
+         <!-- desserts -->
+         <section class="menu__description">
+            <h3 class="menu__description--titre">Desserts</h3>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Farandole de desserts</h4>
+                  <p class="produit">Du chef</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>18€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Crème brulée</h4>
+                  <p class="produit">Revisitée</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>22€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+               <div class="info--titre-plat">
+                  <h4>Tiramisu </h4>
+                  <p class="produit">À la noisette</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>23€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+         </section>
+      </section>
+      <section class="slogan">
+         <button class="btn">
+            Commander
+         </button>
+      </section>
+
    </main>
 
    <footer>
-    <h2>ohmyfood</h2>
-    <nav>
-       <ul>
-          <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-          <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-       </ul>
-    </nav>
- </footer>
+      <h2>ohmyfood</h2>
+      <nav>
+         <ul>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+         </ul>
+      </nav>
+   </footer>
 </body>
+
 </html>
