--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -35,7 +35,7 @@
            <div class="bloc-nom__texte">
               <h1>À la française</h1>
            </div>
-           <i class="far fa-heart fa-xl"></i>
+           <i class="fa-regular fa-heart fa-2x coeur"></i>
         </div>
     </section>
       <section class="menu__description--plat">
@@ -45,8 +45,8 @@
             <div class="menu__description--bloc_plat">
                <div class="info">
                <div class="info--titre-plat">
-                  <h4>Fricassée d'escargot</h4>
-                  <p class="produit">Au piment d'Espelette</p>
+                  <h4>Tartare de poulpe acidulé</h4>
+                  <p class="produit">Aux zestes d'orange</p>
                </div>
                   <div class="info--prix">
                     <h4>25€</h4>
@@ -59,8 +59,8 @@
             <div class="menu__description--bloc_plat">
                <div class="info">
                <div class="info--titre-plat">
-                  <h4>Foie gras de canard mi-cuit</h4>
-                  <p class="produit">Et ses copeaux de truffe noire</p>
+                  <h4>Velouté de légumes d'antan</h4>
+                  <p class="produit">Carotte, panais, topinambour</p>
                </div>
                   <div class="info--prix">
                     <h4>35€</h4>
@@ -73,8 +73,8 @@
             <div class="menu__description--bloc_plat">
                <div class="info">
                <div class="info--titre-plat">
-                  <h4>Oeuf au plat</h4>
-                  <p class="produit">Assaisonné à la truffe sur lit de caviar</p>
+                  <h4>Soupe à l'oignon</h4>
+                  <p class="produit">Revisitée</p>
                </div>
                   <div class="info--prix">
                     <h4>20€</h4>
@@ -91,8 +91,8 @@
             <div class="menu__description--bloc_plat">
                <div class="info">
                <div class="info--titre-plat">
-                  <h4>Filet de boeuf aux herbes</h4>
-                  <p class="produit">Accompagné de sa ribambelle de légumes</p>
+                  <h4>Coquilles Saint-Jacques</h4>
+                  <p class="produit">Accompagnées d'une purée de panais</p>
                </div>
                   <div class="info--prix">
                     <h4>40€</h4>
@@ -105,8 +105,8 @@
             <div class="menu__description--bloc_plat">
                <div class="info">
                <div class="info--titre-plat">
-                  <h4>Parmentier de queue de boeuf</h4>
-                  <p class="produit">À la truffe noire sur sa purée de panais</p>
+                  <h4>Magret de canard</h4>
+                  <p class="produit">Et parmentier de pommes de terre</p>
                </div>
                   <div class="info--prix">
                     <h4>35€</h4>
@@ -119,8 +119,8 @@
             <div class="menu__description--bloc_plat">
                <div class="info">
                <div class="info--titre-plat">
-                  <h4>Filet de turbot</h4>
-                  <p class="produit">Aux agrumes</p>
+                  <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                  <p class="produit">Sur son lit de gnocchis aux légumes</p>
                </div>
                   <div class="info--prix">
                     <h4>44€</h4>
@@ -137,8 +137,8 @@
             <div class="menu__description--bloc_plat">
                <div class="info">
                <div class="info--titre-plat">
-                  <h4>Paris-Brest</h4>
-                  <p class="produit">Revisité</p>
+                  <h4>Pétales de violettes glacés</h4>
+                  <p class="produit">Et purée de noisettes</p>
                </div>
                   <div class="info--prix">
                     <h4>18€</h4>
@@ -151,8 +151,8 @@
             <div class="menu__description--bloc_plat">
                <div class="info">
                <div class="info--titre-plat">
-                  <h4>Macaron au chocolat d'exception</h4>
-                  <p class="produit">Et glace à la vanille de Madagascar</p>
+                  <h4>Fondant au chocolat</h4>
+                  <p class="produit">Revisité</p>
                </div>
                   <div class="info--prix">
                     <h4>22€</h4>
@@ -165,8 +165,8 @@
             <div class="menu__description--bloc_plat">
                <div class="info">
                <div class="info--titre-plat">
-                  <h4>Mousse au chocolat</h4>
-                  <p class="produit">Au piment d'Espelette et à la truffe noire</p>
+                  <h4>Millefeuille croustillant</h4>
+                  <p class="produit">Myrtilles et pâte d’amande</p>
                </div>
                   <div class="info--prix">
                     <h4>23€</h4>
