--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -35,7 +35,7 @@
              <div class="bloc-nom__texte">
                 <h1>Le délice des sens</h1>
              </div>
-             <i class="far fa-heart fa-xl"></i>
+             <i class="fa-regular fa-heart fa-2x coeur"></i>
           </div>
       </section>
       <section class="menu__description--plat">
