--- a/palettedugout.html
+++ b/palettedugout.html
@@ -4,7 +4,7 @@
 <head>
    <title>La Palette du goût - Ohmygod</title>
    <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
    <link rel="icon" type="image/png" sizes="16x16" href="public/images/logo/favicons/favicon-16x16.png">
    <meta name="msapplication-TileColor" content="#ffffff">
