--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -4,7 +4,7 @@
 <head>
    <title>La note enchantée - Ohmygod</title>
    <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
    <link rel="icon" type="image/png" sizes="16x16" href="public/images/logo/favicons/favicon-16x16.png">
    <meta name="msapplication-TileColor" content="#ffffff">
@@ -27,7 +27,7 @@
         <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
               alt="logo_oh_my_food" /></a>    
      </header>
-     <main class="menu">
+     <section class="menu">
      <section class="menu__entete">
           <img src="public/images/restaurants/note_enchantee.jpg"
                 alt="la_note_enchantee">     
@@ -198,7 +198,7 @@
          </button>
       </section>
 
-   </main>
+   </section>
 
    <footer>
       <h2>ohmyfood</h2>
