--- a/palettedugout.html
+++ b/palettedugout.html
@@ -27,7 +27,7 @@
       <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
             alt="logo_oh_my_food" /></a>
    </header>
-   <main class="menu">
+   <section class="menu">
       <section class="menu__entete">
          <img src="public/images/restaurants/palette_du_gout.jpg" alt="palette_du_gout">
          <div class="nom_resto">
@@ -184,7 +184,7 @@
          </button>
       </section>
 
-   </main>
+   </section>
 
    <footer>
       <h2>ohmyfood</h2>
