--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
                placeholder="Paris, Belleville" />
          </form>
          <!-- Section slogan -->
-         <section class="slogan">
+         <div class="slogan">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <button class="btn cursor">
                Explorer nos restaurants
             </button>
-         </section>
+         </div>
          <!-- section explication fonctionnement -->
-         <section class="fctnt">
+         <div class="fctnt">
             <h2>Fonctionnement</h2>
             <div class="fctnt__ens_btns">
                <button class="btn_fctnt cursor">
@@ -81,9 +81,9 @@
                   Dégustez au restaurant
                </button>
             </div>
-         </section>
+         </div>
          <!--  Liste restaurants -->
-         <section class="resto">
+         <div class="resto">
             <h2>Restaurants</h2>
             <div class="liste_resto">
                <!-- Palette des gouts -->
@@ -149,7 +149,7 @@
                   </div>
                </a>
             </div>
-         </section>
+         </div>
       </section>
       <footer>
          <h2>ohmyfood</h2>
