--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -27,7 +27,7 @@
         <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
               alt="logo_oh_my_food" /></a>    
      </header>
-     <section class="menu">
+     <div class="menu">
      <section class="menu__entete">
           <img src="public/images/restaurants/delice_des_sens.jpg"
                 alt="la_note_enchantee">     
@@ -38,7 +38,7 @@
              <i class="fa-regular fa-heart fa-2x coeur"></i>
           </div>
       </section>
-      <section class="menu__description--plat">
+      <div class="menu__description--plat">
          <!-- Entrées -->
          <section class="menu__description">
             <h3 class="menu__description--titre">Entrées</h3>
@@ -177,14 +177,14 @@
                </div>
             </div>
          </section>
-      </section>
-      <section class="slogan">
+      </div>
+      <div class="slogan">
          <button class="btn">
             Commander
          </button>
-      </section>
+      </div>
 
-   </section>
+   </div>
 
    <footer>
       <h2>ohmyfood</h2>
