--- a/palettedugout.html
+++ b/palettedugout.html
@@ -27,7 +27,7 @@
       <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
             alt="logo_oh_my_food" /></a>
    </header>
-   <section class="menu">
+   <div class="menu">
       <section class="menu__entete">
          <img src="public/images/restaurants/palette_du_gout.jpg" alt="palette_du_gout">
          <div class="nom_resto">
@@ -38,7 +38,7 @@
 
          </div>
       </section>
-      <section class="menu__description--plat">
+      <div class="menu__description--plat">
          <!-- Entrées -->
          <section class="menu__description">
             <h3 class="menu__description--titre">Entrées</h3>
@@ -177,12 +177,12 @@
                </div>
             </div>
          </section>
-      </section>
-      <section class="slogan">
+      </div>
+      <div class="slogan">
          <button class="btn">
             Commander
          </button>
-      </section>
+      </div>
 
    </section>
 
