--- a/palettedugout.html
+++ b/palettedugout.html
@@ -5,7 +5,6 @@
    <title>La Palette du goût - Ohmygod</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-
    <link rel="icon" type="image/png" sizes="16x16" href="public/images/logo/favicons/favicon-16x16.png">
    <meta name="msapplication-TileColor" content="#ffffff">
    <meta name="theme-color" content="#ffffff">
@@ -27,7 +26,9 @@
       <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
             alt="logo_oh_my_food" /></a>
    </header>
+   <!--  main -->
    <div class="menu">
+      <!-- ENTÊTE -->
       <section class="menu__entete">
          <img src="public/images/restaurants/palette_du_gout.jpg" alt="palette_du_gout">
          <div class="nom_resto">
@@ -35,21 +36,21 @@
                <h1>La palette du goût </h1>
             </div>
             <i class="fa-regular fa-heart fa-2x coeur"></i>
-
          </div>
       </section>
+      <!--  MENU -->
       <div class="menu__description--plat">
          <!-- Entrées -->
          <section class="menu__description">
             <h3 class="menu__description--titre">Entrées</h3>
             <div class="menu__description--bloc_plat">
                <div class="info">
-               <div class="info--titre-plat">
-                  <h4>Fricassée d'escargot</h4>
-                  <p class="produit">Au piment d'Espelette</p>
-               </div>
+                  <div class="info--titre-plat">
+                     <h4>Fricassée d'escargot</h4>
+                     <p class="produit">Au piment d'Espelette</p>
+                  </div>
                   <div class="info--prix">
-                    <h4>25€</h4>
+                     <h4>25€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -58,12 +59,12 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
-               <div class="info--titre-plat">
-                  <h4>Foie gras de canard mi-cuit</h4>
-                  <p class="produit">Et ses copeaux de truffe noire</p>
-               </div>
+                  <div class="info--titre-plat">
+                     <h4>Foie gras de canard mi-cuit</h4>
+                     <p class="produit">Et ses copeaux de truffe noire</p>
+                  </div>
                   <div class="info--prix">
-                    <h4>35€</h4>
+                     <h4>35€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -72,12 +73,12 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
-               <div class="info--titre-plat">
-                  <h4>Oeuf au plat</h4>
-                  <p class="produit">Assaisonné à la truffe sur lit de caviar</p>
-               </div>
+                  <div class="info--titre-plat">
+                     <h4>Oeuf au plat</h4>
+                     <p class="produit">Assaisonné à la truffe sur lit de caviar</p>
+                  </div>
                   <div class="info--prix">
-                    <h4>20€</h4>
+                     <h4>20€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -90,12 +91,12 @@
             <h3 class="menu__description--titre">Plats</h3>
             <div class="menu__description--bloc_plat">
                <div class="info">
-               <div class="info--titre-plat">
-                  <h4>Filet de boeuf aux herbes</h4>
-                  <p class="produit">Accompagné de sa ribambelle de légumes</p>
-               </div>
+                  <div class="info--titre-plat">
+                     <h4>Filet de boeuf aux herbes</h4>
+                     <p class="produit">Accompagné de sa ribambelle de légumes</p>
+                  </div>
                   <div class="info--prix">
-                    <h4>40€</h4>
+                     <h4>40€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -104,12 +105,12 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
-               <div class="info--titre-plat">
-                  <h4>Parmentier de queue de boeuf</h4>
-                  <p class="produit">À la truffe noire sur sa purée de panais</p>
-               </div>
+                  <div class="info--titre-plat">
+                     <h4>Parmentier de queue de boeuf</h4>
+                     <p class="produit">À la truffe noire sur sa purée de panais</p>
+                  </div>
                   <div class="info--prix">
-                    <h4>35€</h4>
+                     <h4>35€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -118,12 +119,12 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
-               <div class="info--titre-plat">
-                  <h4>Filet de turbot</h4>
-                  <p class="produit">Aux agrumes</p>
-               </div>
+                  <div class="info--titre-plat">
+                     <h4>Filet de turbot</h4>
+                     <p class="produit">Aux agrumes</p>
+                  </div>
                   <div class="info--prix">
-                    <h4>44€</h4>
+                     <h4>44€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -136,12 +137,12 @@
             <h3 class="menu__description--titre">Desserts</h3>
             <div class="menu__description--bloc_plat">
                <div class="info">
-               <div class="info--titre-plat">
-                  <h4>Paris-Brest</h4>
-                  <p class="produit">Revisité</p>
-               </div>
+                  <div class="info--titre-plat">
+                     <h4>Paris-Brest</h4>
+                     <p class="produit">Revisité</p>
+                  </div>
                   <div class="info--prix">
-                    <h4>18€</h4>
+                     <h4>18€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -150,12 +151,12 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
-               <div class="info--titre-plat">
-                  <h4>Macaron au chocolat d'exception</h4>
-                  <p class="produit">Et glace à la vanille de Madagascar</p>
-               </div>
+                  <div class="info--titre-plat">
+                     <h4>Macaron au chocolat d'exception</h4>
+                     <p class="produit">Et glace à la vanille de Madagascar</p>
+                  </div>
                   <div class="info--prix">
-                    <h4>22€</h4>
+                     <h4>22€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -164,12 +165,12 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
-               <div class="info--titre-plat">
-                  <h4>Mousse au chocolat</h4>
-                  <p class="produit">Au piment d'Espelette et à la truffe noire</p>
-               </div>
+                  <div class="info--titre-plat">
+                     <h4>Mousse au chocolat</h4>
+                     <p class="produit">Au piment d'Espelette et à la truffe noire</p>
+                  </div>
                   <div class="info--prix">
-                    <h4>23€</h4>
+                     <h4>23€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -178,14 +179,14 @@
             </div>
          </section>
       </div>
+      <!-- BOUTON COMMANDE -->
       <div class="slogan">
          <button class="btn">
             Commander
          </button>
       </div>
-
-   </section>
-
+   </div>
+ <!--   footer -->
    <footer>
       <h2>ohmyfood</h2>
       <nav>
