--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -178,6 +178,7 @@
             </div>
          </section>
       </div>
+     <!--  BOUTON -->
       <div class="slogan">
          <button class="btn">
             Commander
